# dungeons_and_dragons

./: Cargo.toml  LICENSE  README.md  \  pyproject.toml
assets/shaders/: lineDetector.wgsl
pysrc/: main.py
src/: lib.rs  main.rs
src/ai/: mod.rs
src/building_gen/: mod.rs
src/character_gen/: mod.rs
src/dnd_structs/: mod.rs
src/networking/: .mod.rs.swp  mod.rs  serializable_impls.rs
src/physics/: collider.rs  matrix4.rs  mod.rs  rigidbody.rs  vector3.rs
src/python_scripting/: mod.rs  scripting_module.rs
src/scripting/: mod.rs  scripting_module.rs
src/terrain_gen/: mod.rs
