[package]
name = "dungeons_and_dragons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.0"
bevy-steamworks = "0.7.0"
rs_openai = "0.4.1"
rustpython = "0.3.0"
rustpython-vm = "0.3.0"
steamworks = "0.10.0"
tokio = "1.32.0"
