[package]
name = "dungeons_and_dragons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.0"
bevy-steamworks = "0.7.0"
bevy-trait-query = "0.2.0"
bevy_app_compute = "0.10.3"
open = "5.0.0"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
rs_openai = "0.4.1"
steamworks = "0.10.0"
tokio = "1.32.0"

[lib]
name = "dndlib"

crate-type = ["cdylib"]
